<resources>
    <string name="app_name">myFitNoteAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_foods">Cibi</string>
    <string name="misura_battito">Misura battito</string>
    <string name="esercizi">Esercizi</string>
    <string name="schede">Schede</string>
    <string name="crea_scheda">Nuova scheda</string>
    <string name="registrazione_2">Seconda Fase Registrazione</string>
    <string name="logout">Logout</string>
    <string name="obbiettivi">Obbiettivi</string>
    <string name="kcal">Calcola Kcal</string>
    <string name="bmi">BMI</string>


    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
