<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myfitnoteandroid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.myfitnoteandroid.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_calcola_kcal"
        android:name="com.example.myfitnoteandroid.ui.calcolaKcal.calcolaKcalFragment"
        android:label="@string/menu_kcal"
        tools:layout="@layout/fragment_kcal" />

    <fragment
        android:id="@+id/nav_mis_battito"
        android:name="com.example.myfitnoteandroid.ui.misuraBattito.misuraBattitoFragment"
        android:label="@string/misura_battito"
        tools:layout="@layout/fragment_kcal" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myfitnoteandroid.ui.esercizi.eserciziFragment"
        android:label="@string/esercizi"
        tools:layout="@layout/fragment_esercizi" />
</navigation>